Adding OpenStack artifacts to travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,9 @@ matrix:
       - pip install pip --upgrade
       - pip install setuptools --upgrade
       - pip install google-compute-engine
+      - pip install openstacksdk
       - pip install cloudaux\[gcp\]
+      - pip install cloudaux\[openstack\]
       - python setup.py develop
       - pip install .[tests]
       - pip install coveralls
