--- a/.travis.yml
+++ b/.travis.yml
@@ -154,6 +154,4 @@ cache:
 
 notifications:
   email:
-    - mgrima@netflix.com
-    - pkelley@netflix.com
-    - tmcpeak@netflix.com
+    - mstair@att.com
